q2/k8s-manifest/web-manifests/overlays/neil-test/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asiayo-web
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: web
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
