q2/k8s-manifest/web-manifests/overlays/neil-test/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asiayo-ingress
spec:
  rules:
  - host: neil-test.asiayo.com
